test/spec_vectors/conversions/fail/module_6.wat
(module (func (result i32) (i32.reinterpret_f32 (i64.const 0))))